force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/vlocity_cmt__Interface_BillingInfo__c.object-meta.xml
<CustomObject>
    <description>Interface Object: Vlocity DataMapper interface object for importing billing information into the Vlocity Communications database.</description>
    <label>Interface_BillingInfo</label>
    <nameField>
        <label>Interface_BillingInfo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface_BillingInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>