force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaCurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaCurrentBalance__c</fullName>
    <description>Statement CurrentBalance</description>
    <label>StaCurrentBalance__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>