force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaDueDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaDueDate__c</fullName>
    <description>Statement DueDate</description>
    <label>StaDueDate__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>