force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaItemExternalId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaItemExternalId__c</fullName>
    <externalId>true</externalId>
    <label>StaItemExternalId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>