force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteAmount__c</fullName>
    <description>StatementLineItem Amount</description>
    <label>StaLinIteAmount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>