force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteCurrencyAmount__c</fullName>
    <description>StatementLineItem CurrencyAmount</description>
    <label>StaLinIteCurrencyAmount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>