force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteCurrentMonthToDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteCurrentMonthToDate__c</fullName>
    <description>StatementLineItem CurrentMonthToDate</description>
    <label>StaLinIteCurrentMonthToDate__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>