force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteServiceID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteServiceID__c</fullName>
    <description>StatementLineItem ServiceID</description>
    <label>StaLinIteServiceID__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>