force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteServiceName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteServiceName__c</fullName>
    <description>StatementLineItem ServiceName</description>
    <label>StaLinIteServiceName__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>