force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteServiceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteServiceType__c</fullName>
    <description>StatementLineItem ServiceType</description>
    <label>StaLinIteServiceType__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>