force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteStatementDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteStatementDate__c</fullName>
    <description>StatementLineItem StatementDate</description>
    <label>StaLinIteStatementDate__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>