force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteStatementGroup__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteStatementGroup__c</fullName>
    <description>StatementLineItem StatementGroup</description>
    <label>StaLinIteStatementGroup__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>