force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteUOM__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteUOM__c</fullName>
    <description>StatementLineItem UOM</description>
    <label>StaLinIteUOM__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>