force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaLinIteUsage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaLinIteUsage__c</fullName>
    <description>StatementLineItem Usage</description>
    <label>StaLinIteUsage__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>