force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaServicesBilled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaServicesBilled__c</fullName>
    <description>Statement ServicesBilled</description>
    <label>StaServicesBilled__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>