force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaStatementAccountstatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaStatementAccountstatus__c</fullName>
    <description>Statement StatementAccountstatus</description>
    <label>StaStatementAccountstatus__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>