force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaStatementDetails__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaStatementDetails__c</fullName>
    <description>Statement StatementDetails</description>
    <label>StaStatementDetails__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>