force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaStatementPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaStatementPeriodEndDate__c</fullName>
    <description>Statement StatementPeriodEndDate</description>
    <label>StaStatementPeriodEndDate__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>