force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaStatementPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaStatementPeriodStartDate__c</fullName>
    <description>Statement StatementPeriodStartDate</description>
    <label>StaStatementPeriodStartDate__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>