force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/fields/vlocity_cmt__StaStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StaStatus__c</fullName>
    <description>Statement Status</description>
    <label>StaStatus__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>