force-app/main/default/objects/vlocity_cmt__Interface_BillingInfo__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>vlocity_cmt__DRBundleName__c</columns>
    <columns>vlocity_cmt__DRError__c</columns>
    <columns>vlocity_cmt__DRProgressData__c</columns>
    <columns>vlocity_cmt__DRStatus__c</columns>
    <columns>vlocity_cmt__StaItemExternalId__c</columns>
    <columns>vlocity_cmt__StaName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>